--- a/Untitled.html
+++ b/Untitled.html
@@ -24,13 +24,14 @@
        </div>
         <div class="index1">
          
-            <h1>hello!</h1>
+            <h1 class="hello">hello!</h1>
             <p> hello to  amr market</p>
          <button><a href="index%20market.html">sign in </a></button>
             <button><a href="mainpage.html">skip sining in</a></button>
             
          </div>  
     </div>
+     <script>window.alert('HELLO TO AMR MARKET PLS,SEE OUR GREAT DEALS')</script>
     </body>
 </html>
 
