--- a/info.html
+++ b/info.html
@@ -42,7 +42,7 @@
         
             </div>
            <div class="butt2">
-          <a class="jof" href="main2.html">confirm</a>
+          <a class="jof" href="mainpage.html">confirm</a>
              </div>
     </div>
     
