--- a/cont.html
+++ b/cont.html
@@ -23,7 +23,7 @@
           
            </div>
         
-        <h4 class="home">home page</h4>
+        <a class="home" href="mainpage.html">home page</a>
         <a  class="cat1" href="cat.html">catogries</a>
         <div class="cart">
            <a class="png" href="cart.html"><img src="shopping-cart.png" width="40px"></a> 
