--- a/Untitled.html
+++ b/Untitled.html
@@ -31,8 +31,8 @@
             
          </div>  
     </div>
-     <script>window.alert('HELLO TO AMR MARKET PLS,SEE OUR GREAT DEALS')</script>
+   
     </body>
 </html>
-
+  <script>console.log('tdy');</script>
      
